2000-02-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* README.UPGRADING, include/mail.h.in, scheduler/scheduler.c,
	  transports/libta/markoff.c:
	    Prepared for adding _CF_MIMESTRUCT multiline entity into
	    the TA-specsfile.  It will contain preparsed result of what
	    the message structure is - and be able to prevent e.g. decoding
	    QP when the end result exceeds linelength limits..
	    (And do proper body structure processings where appropriate)

	* transports/smtp/smtp.c:
	    Lengthen the -Ttcpw= default to 5 minutes (RFC 1123: 3 minutes)

	* router/parsedate.c:
	    Armour  lilian()  function against bad MON or DAY inputs.
	    (Especially zero month is deadly..)  However this code is
	    currently completely dead -- not used, so...

	* scheduler/mq2.c, transports/mailbox/mailbox.c, transports/sm/sm.c,
	  transports/smtp/smtp.h, transports/smtp/smtptls.c,
	  transports/smtp/smtp.c, transports/smtp/appendlet.c:
	    Turns out the  sfsetfd()  has a undesirable side-effect,
	    which might be turnable off, but...  Namely it does sfsync()
	    on the stream before setting the fd -- we don't want that.

	* libsh/io.c, router/functions.c, router/prototypes.h,
	  router/rtsyslog.c, smtpserver/smtprouter.c,
	  transports/libta/diagnostic.c:
	    Cleaned up several GCC 2.96 reported/complained things.
	    (Couple of which stopped compilation..)

	* transports/smtp/smtp.c:
	    More of hunting of strange errors at protocol transmission.

	* smtpserver/smtpserver.c:
	    When reporting '-- pipeline input exists', do that immediately
	    after collecting previous input line, not after SYNCing out
	    previous reply.

2000-02-01  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/appendlet.c, transports/smtp/smtp.h,
	  transports/smtp/smtptls.c,   transports/smtp/smtp.c:
	    More of the same work as yesterday evening/today early morning..

	* transports/smtp/smtp.c, transports/smtp/smtptls.c,
	  transports/libta/swriteheaders.c: